--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /desktop.ini
+/.vs/ApiCatalogoJogos/v16/.suo
+/ApiCatalogoJogos/obj
+/.vs/ApiCatalogoJogos/DesignTimeBuild/.dtbcache.v2
